--- a/WPF_Document/WPF_Document.csproj
+++ b/WPF_Document/WPF_Document.csproj
@@ -7,4 +7,18 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="bold.png" />
+    <None Remove="italic-font.png" />
+    <None Remove="italic.png" />
+    <None Remove="underline-text.png" />
+    <None Remove="underlined-text.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="bold.png" />
+    <Resource Include="italic.png" />
+    <Resource Include="underline-text.png" />
+  </ItemGroup>
+
 </Project>
